<resources>
    <!--Login view-->
    <string name="app_name">FelippEx</string>
    <string name="login">Login</string>
    <string name="representative_email_login">Representative E-mail</string>
    <string name="representative_password_login">Representative password</string>
    <!--END OF Login view-->

    <!--Main menu view-->
    <string name="what_would_you_like_to_do_main_menu">What would you like to do?</string>
    <string name="receive_a_package_button">Receive a package</string>
    <string name="deliver_a_package_button">Deliver a package</string>
    <string name="view_package_list_button">View received packages</string>
    <!--END OF Main menu view-->

    <!--New/Edit package view-->
    <string name="retrieval_form_textView">Retrieval Form</string>
    <string name="senders_information_textView">Sender\'s Information</string>
    <string name="senders_fullName_hint_editText">Sender\'s full name</string>
    <string name="senders_phone_hint_editText">Sender\'s phone number</string>
    <string name="senders_address_hint_editText">Sender\'s address</string>

    <string name="receivers_information_textView">Receiver\'s Information</string>
    <string name="receivers_fullName_hint_editText">Receiver\'s full name</string>
    <string name="receivers_phone_hint_editText">Receiver\'s phone number</string>
    <string name="receivers_address_hint_editText">Receiver\'s address</string>

    <string name="photograph_the_package_button">Photo the package</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="package_received_button">Package Received</string>
    <!--END OF New/Edit package view-->

    <!--Today received packages view-->
    <string name="today_received_title">Today\'s receipts</string>
    <string name="deliveries_title">Deliveries</string>
    <string name="id_row_textView">ID :</string>
    <string name="receiver">Receiver :</string>
    <string name="sender">Sender :</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <!--END OF Today received packages view-->

    <!--General-->
    <string name="felippex_logo_description">FelippEx Logo</string>
    <string name="delivery_info_title">Delivery Info</string>
    <string name="no_deliveries_found_textview">No Deliveries Found</string>
    <string name="sender_information_label">Sender Information</string>
    <string name="receiver_information_label">Receiver Information</string>
    <string name="full_name_label">Full name :</string>
    <string name="phone_number_label">Phone number :</string>
    <string name="address_label">Address :</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="mark_as_delivered_button">Mark as Delivered</string>
    <string name="package_image_imageview">Package Image</string>

    <!--Static Keys-->
    <string name="maps_api_key">AIzaSyDTZkZBLv3R_B3pq6fvXJEvwFbYJJtbKd4</string>
    <string name="package_photo_label">Package Photo</string>
    <!--END OF Static Keys-->

    <!--Toasts-->
    <string name="saving_delivery_toast">Please wait while saving the delivery information &#8230;</string>
    <string name="success_delivery_save_toast">The delivery was recorded successfully</string>
    <string name="failed_delivery_save_toast">FAILED to store delivery!</string>
    <string name="saving_delivery_changes_toast">Please wait while saving the changes &#8230;</string>
    <string name="changes_saved_toast">Changes saved!</string>
    <string name="failed_saving_changes_toast">FAILURE: Changes weren\'t saved</string>
    <string name="fill_the_field_requests_toast">Please fill all the fields regarding sender and receiver valid information</string>
    <string name="request_package_photo_toast">Please take a photo of the package</string>
    <string name="request_email_fill_toast">Please fill your corporate FileppEx e-mail</string>
    <string name="email_appears_invalid_toast">The e-mail provided appears to be invalid</string>
    <string name="request_password_fill_toast">Please provide your corporate FileppEx password associated with&#160;</string>
    <string name="deletion_failed_toast">FAILED to delete delivery</string>
    <string name="package_marked_delivered_toast">Package marked as DELIVERED</string>
    <string name="package_not_marked_delivered_toast">FAILURE: Package failed to be marked as delivered</string>
    <string name="login_in_progress_toast">Login in Progress, please wait &#8230;</string>
    <string name="problem_sign_in_dialog">There was a problem signing in &#8230;</string>
    <string name="no_available_deliveries_toast">There are no deliveries for today</string>
    <string name="something_went_wrong_toast">Something went wrong</string>
    <string name="no_receipts_collected_today">No packages have been collected today</string>
    <!--END OF Toasts-->
</resources>
