<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PackageEditActivity">

    <LinearLayout
        android:id="@+id/title_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/retrieval_form_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/retrieval_form_textView"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/felippex_logo_description"
            android:scaleType="fitStart"
            android:src="@drawable/felippex" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/main_scrollView"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/package_received_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sender_info_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/senders_information_textView"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/sender_fullName_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/senders_fullName_hint_editText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/sender_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/senders_phone_hint_editText"
                android:inputType="phone" />

            <EditText
                android:id="@+id/sender_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/senders_address_hint_editText"
                android:inputType="textPostalAddress" />

            <TextView
                android:id="@+id/receiver_info_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/receivers_information_textView"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/receiver_fullName_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/receivers_fullName_hint_editText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/receiver_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/receivers_phone_hint_editText"
                android:inputType="phone" />

            <EditText
                android:id="@+id/receiver_address_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/receivers_address_hint_editText"
                android:inputType="textPostalAddress" />

            <Button
                android:id="@+id/take_photo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/photograph_the_package_button"
                android:textColor="#fff"
                android:textStyle="bold"
                android:onClick="onRequestPhoto"/>

            <ImageView
                android:id="@+id/package_image_placeholder"
                android:scaleType="centerCrop"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/package_received_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/package_received_button"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="recordDelivery"/>

</android.support.constraint.ConstraintLayout>