<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"

        android:contentDescription="@string/felippex_logo_description"
        app:layout_constraintBottom_toTopOf="@+id/promptTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/felippex" />

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/what_would_you_like_to_do_main_menu"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/receivePackageButton"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <Button
        android:id="@+id/receivePackageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorAccent"
        android:padding="15dp"

        android:text="@string/receive_a_package_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/deliverPackageButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptTextView" />

    <Button
        android:id="@+id/deliverPackageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:text="@string/deliver_a_package_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/viewPackagesButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receivePackageButton" />

    <Button
        android:id="@+id/viewPackagesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_package_list_button"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliverPackageButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</android.support.constraint.ConstraintLayout>