<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/package_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#fff"
    android:elevation="5dp"
    android:padding="5dp">


    <TextView
        android:id="@+id/id_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:text="@string/id_row_textView"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_output_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="LA8exBz0ndP31xKNxqk"
        android:textStyle="bold"

        app:layout_constraintLeft_toRightOf="@id/id_textview"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/sender_textview_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sender"

        app:layout_constraintBottom_toTopOf="@id/receiver_textview_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_textview"

        />

    <TextView
        android:id="@+id/sender_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@id/receiver_name_textview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_output_textview" />


    <TextView
        android:id="@+id/receiver_textview_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"

        android:text="@string/receiver"
        app:layout_constraintBottom_toTopOf="@+id/view_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sender_textview_placeholder" />

    <TextView
        android:id="@+id/receiver_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"

        app:layout_constraintBottom_toTopOf="@id/edit_button"

        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/view_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="@color/colorAccent"
        android:text="@string/view"

        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edit_button" />

    <Button
        android:id="@+id/edit_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"

        android:background="@color/colorPrimaryDark"
        android:text="@string/edit"

        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/view_button"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>