<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/package_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/title_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="@string/id_row_textView"
            android:textSize="18sp"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/id_output_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="LA8exBz0ndP31xKNxqk"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sender_info_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sender_textview_placeholder"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight=".05"
            android:text="@string/sender" />

        <TextView
            android:id="@+id/sender_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Constantinos Stathis" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/receiver_info_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/receiver_textview_placeholder"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight=".05"
            android:text="@string/receiver" />

        <TextView
            android:id="@+id/receiver_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Filippos Georgiou" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/view_button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/view"
            android:textColor="#FFF"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="0dp" />

        <Button
            android:id="@+id/edit_button"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/edit"
            android:textColor="#fff"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp" />

    </LinearLayout>

</LinearLayout>